exclude/include workerpool orders with "any" authorized address
