# api/openapi.yaml
@@ -616,16 +616,31 @@ paths:
           description: apprestrict address to include in results
           schema:
             type: string
+        - name: isAppStrict
+          in: query
+          description: exclude orders with permissions allowing "any" app (default false, ignored if `app` is not specified)
+          schema:
+            type: boolean
         - name: dataset
           in: query
           description: datasetrestrict address to include in results
           schema:
             type: string
+        - name: isDatasetStrict
+          in: query
+          description: exclude orders with permissions allowing "any" dataset (default false, ignored if `dataset` is not specified)
+          schema:
+            type: boolean
         - name: requester
           in: query
           description: requesterrestrict address to include in results
           schema:
             type: string
+        - name: isRequesterStrict
+          in: query
+          description: exclude orders with permissions allowing "any" requester (default false, ignored if `requester` is not specified)
+          schema:
+            type: boolean
         - $ref: '#/components/parameters/PageIndex'
         - $ref: '#/components/parameters/PageSize'
         - $ref: '#/components/parameters/Page'
