# api/src/controllers/router.js
@@ -455,8 +455,11 @@ router.get('/workerpoolorders', bodyParser(), async (ctx) => {
     workerpool,
     category,
     app,
+    isAppStrict,
     dataset,
+    isDatasetStrict,
     requester,
+    isRequesterStrict,
     workerpoolOwner,
     minTag,
     maxTag,
@@ -470,8 +473,11 @@ router.get('/workerpoolorders', bodyParser(), async (ctx) => {
     workerpool: addressOrAnySchema(),
     workerpoolOwner: addressSchema(),
     app: addressOrAnySchema(),
+    isAppStrict: booleanSchema(),
     dataset: addressOrAnySchema(),
+    isDatasetStrict: booleanSchema(),
     requester: addressOrAnySchema(),
+    isRequesterStrict: booleanSchema(),
     category: positiveIntSchema(),
     minTag: bytes32Schema(),
     maxTag: bytes32Schema(),
@@ -486,8 +492,11 @@ router.get('/workerpoolorders', bodyParser(), async (ctx) => {
     workerpool,
     category,
     app,
+    isAppStrict,
     dataset,
+    isDatasetStrict,
     requester,
+    isRequesterStrict,
     workerpoolOwner,
     minTag,
     maxTag,
